...
          ),
        }}
      />
      <Tabs.Screen
        name="proxy-pay"
        options={{
          title: 'Pay',
          tabBarIcon: ({ color, size }) => (
            <TabIcon name="card-outline" color={color} size={size} />
          ),
        }}
      />
      <Tabs.Screen
...
